# HBAAC-Dealight

./: .dockerignore  .env.example  .gitignore  COMPUTE_PIPELINE_FOR_REPORT_AGENT.md  DEPLOYMENT.md  Makefile  README.md  feature_registry.yaml  pyproject.toml  sku_demand_forecasting_sprint_plan.md
.github/workflows/: ci.yml
api/: Dockerfile  __init__.py
api/app/: config.py  main.py  repository.py  schemas.py
dags/: dag_01_ingest_transform.py  dag_02_build_features.py  dag_03_train_model.py  dag_04_batch_forecast.py  sprint_01_platform_health.py
data/artifacts/: twostage_future_top_sku_forecast_twostage_active_recent_top_profit_top300_a50_r56_lb730_s7_tc_sun0_eos0_b900_2025-09-05.pkl
data/features/: evaluation_sprint_04.json
docs/sprints/: SPRINT_00_KICKOFF.md  SPRINT_01_FOUNDATION.md  SPRINT_02_DATA_PIPELINE.md  SPRINT_03_FEATURE_ENGINEERING.md  SPRINT_04_TRAINING_MLFLOW.md  SPRINT_05_BATCH_FORECASTING.md  SPRINT_06_FASTAPI_SERVING.md  STATUS.md
infra/: docker-compose.yml
infra/airflow/: Dockerfile
infra/mlflow/: Dockerfile
infra/postgres/: init-platform-databases.sh
infra/prometheus/: prometheus.yml
scripts/: __init__.py  init_db.sql  load_submission_forecast.py  run_batch_forecast.py  run_data_pipeline.py  run_feature_pipeline.py  sprint_02_pipeline_schema.sql  sprint_03_feature_schema.sql  sprint_05_serving_schema.sql  train_model.py
tests/: test_api.py  test_sprint_00_contract.py  test_sprint_02_pipeline.py  test_sprint_03_features.py  test_sprint_04_training.py  test_sprint_05_forecast.py  test_sprint_06_api.py  test_submission_loader.py
(+14 files in other folders)
